[tool.poetry]
name = "render-t4lite"
version = "0.1.0"
description = ""
authors = ["motokiA275 <ksnk.r0118.bb@gmail.com>"]
readme = "README.md"
packages = [{include = "render_t4lite"}]

[tool.poetry.dependencies]
python = "3.8.3"
numpy = "^1.24.1"
pandas = "^1.5.3"
flask = "^2.2.2"
dash = "^2.7.1"
dash-auth = "^1.4.1"
dash-table = "^5.0.0"
dash-renderer = "^1.9.1"
dash-core-components = "^2.0.0"
dash-html-components = "^2.0.0"
plotly = "^5.12.0"
requests = "2.25.1"
selenium = "^4.7.2"
sqlalchemy = "^1.4.46"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
